--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -59,6 +59,7 @@ body{
             display: flex;
             flex-direction: column;
             margin-left: 30%;
+            padding: 0;
         
             .task{
                 width: 365px;
@@ -70,6 +71,7 @@ body{
                 border-radius: 5px;
                 box-shadow: 3px 3px 3px grey;
                 color:#cedef7 ;
+                
                 transition: 0.3s;
             }
 
