Fixed css style

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -71,8 +71,8 @@ body{
                 border-radius: 5px;
                 box-shadow: 3px 3px 3px grey;
                 color:#cedef7 ;
-                
                 transition: 0.3s;
+                list-style-type: none;
             }
 
             .task:hover{
